testsuite/css/parser/border-crash-3.24.errors
border-crash-3.24.css:3: error: GTK_CSS_PROVIDER_ERROR_SYNTAX
